# my-cokkiecutter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
docs/source/howto/: docs_contribute.rst  index.rst
docs/source/overview/: index.rst
docs/source/tutorial/: index.rst
